<resources>
    <string name="app_name">Flight Search Application</string>
    <string name="From">From</string>
    <string name="To">To</string>
    <string name="Departdate">Depart Date</string>
    <string name="Passengers">No of Passengers</string>
    <string name="search">Search</string>
    <string name="Availabilities">Available Flights Now</string>
    <string-array name="places_array">
        <item>BLR</item>
        <item>CHN</item>
        <item>KOL</item>
        <item>DEL</item>
        <item>VJY</item>
        <item>MAD</item>
        <item>SAT</item>
        <item>PUN</item>
    </string-array>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="date_label_set">Press the button to set the date</string>
    <string name="date_button_set">Set Date</string>
    <string name="date_view_set">The Date is: </string>
    <string name="date_selected"></string>
    <string name="imgdesc">imgdesc</string>
    <string-array name="Flights_array">
        <item>AirIndia</item>
        <item>Dubai Airlines</item>
        <item>Kingfisher</item>
        <item>Indigo</item>
        <item>Tata Flights</item>
        <item>Patanjali Flight</item>
        <item>Indigo 6E098</item>
        <item>SpiceJet R345</item>
        <item>Air Asia 009</item>
    </string-array>
</resources>
