<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingRight="26dp"
    android:paddingLeft="26dp"
    android:gravity="center"
    tools:context=".SearchActivity">

    <EditText
        android:id="@+id/fromid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/From"
        android:layout_marginBottom="5dp"/>

    <EditText
        android:id="@+id/toid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/To"
        android:layout_below="@id/fromid"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="5dp" />

    <EditText
        android:id="@+id/departid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:text="@string/Departdate"
        android:layout_below="@id/toid"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="5dp" />

    <EditText
        android:id="@+id/passengernoid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:text="@string/Passengers"
        android:layout_below="@id/departid"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="5dp" />

    <Button
        android:id="@+id/searchid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search"
        android:layout_below="@id/passengernoid"
        />

</RelativeLayout>